--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,24 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <filter>
+  	<filter-name>flow1</filter-name>
+  	<filter-class>edu.FlowFilterOne</filter-class>
+  </filter>
+  
+  <filter>
+  	<filter-name>flow2</filter-name>
+  	<filter-class>edu.FlowFilterTwo</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  	<filter-name>flow1</filter-name>
+  	<url-pattern>/second</url-pattern>
+  </filter-mapping>
+  
+  <filter-mapping>
+  	<filter-name>flow2</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
