--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,10 @@
   <filter>
   	<filter-name>flow2</filter-name>
   	<filter-class>edu.FlowFilterTwo</filter-class>
+  	<init-param>
+  		<param-name>en</param-name>
+  		<param-value>UTF-8</param-value>
+  	</init-param>
   </filter>
   
   <filter-mapping>
