--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -35,9 +35,20 @@
   	<url-pattern>/second</url-pattern>
   </filter-mapping>
   
+  <!-- 
   <listener>
   	<listener-class>edu.TestRequestListener</listener-class>
   </listener>
+  -->
+  
+  <listener>
+  	<listener-class>edu.TestSessionListener</listener-class>
+  </listener>
+  
+  <listener>
+  	<listener-class>edu.TestSessionAttributeListener</listener-class>
+  </listener>
+  
   
   <filter-mapping>
   	<filter-name>flow2</filter-name>
