--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,17 @@
   	<listener-class>edu.TestServletContextListener</listener-class>
   </listener>
   -->
+  
+  <error-page>
+  	<error-code>405</error-code>
+  	<location>/errorHandle</location>
+  </error-page>
+  
+  <error-page>
+  	<exception-type>java.lang.NullPointerException</exception-type>
+  	<location>/errorHandle</location>
+  </error-page>
+  
   <filter-mapping>
   	<filter-name>flow2</filter-name>
   	<url-pattern>/*</url-pattern>
