--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -68,4 +68,12 @@
   	<filter-name>flow2</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <resource-ref>
+  	<description>Oracle Datasource example</description>
+  	<res-ref-name>jdbc/myoracle</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
+  
 </web-app>
