--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -76,4 +76,11 @@
   	<res-auth>Container</res-auth>
   </resource-ref>
   
+  <jsp-config>
+  	<taglib>
+  		<taglib-uri>http://myTags.com</taglib-uri>
+  		<taglib-location>/WEB-INF/myTag.tld</taglib-location>
+  	</taglib>
+  </jsp-config>
+  
 </web-app>
